fix: list spacing (#64)

--- a/src/theme-src/src/theme-custom.css
+++ b/src/theme-src/src/theme-custom.css
@@ -266,7 +266,7 @@ ol {
 
 ol > li,
 .section ul > li {
-  @apply pl-4;
+  @apply pl-2;
 }
 
 dt {
